@@ -1210,7 +1210,14 @@ UdpMulticast(ClientData instanceData, Tcl_Interp *interp,
     if (action == IP_ADD_MEMBERSHIP) {
 	int ndx = LSearch(statePtr->groupsObj, grp);
 	if (ndx == -1) {
+	    Tcl_Obj *newPtr;
 	    statePtr->multicast++;
+	    if (Tcl_IsShared(statePtr->groupsObj)) {
+		newPtr = Tcl_DuplicateObj(statePtr->groupsObj);
+		Tcl_DecrRefCount(statePtr->groupsObj);
+		Tcl_IncrRefCount(newPtr);
+		statePtr->groupsObj = newPtr;
+	    }
 	    Tcl_ListObjAppendElement(interp, statePtr->groupsObj,
 				     Tcl_NewStringObj(grp,-1));
 	}
